--- a/src/index.hbs
+++ b/src/index.hbs
@@ -395,43 +395,572 @@
             </div>
         </li>
     </ul>
+    <div class="m-tt m-event-t">신규 만화</div>
+    <ul class="m-today-c">
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+    </ul>
+    <div class="m-tt m-event-t">신규 소설</div>
+    <ul class="m-today-c">
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+    </ul>
 </section>
 <section class="m-story m-livetop">
     <div>
-        <div class="m-tt m-event-t">오늘 뭐보지? 실시간 만화 TOP 10</div>
+        <div class="m-live-tt m-event-t">
+            오늘 뭐보지? 실시간 만화 TOP 10
+            <span><br>지금 레진독자들이 보는 그 작품</span>
+        </div>
         <ul class="m-live-cont">
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img" style="background-image: url(./img/m-eve1.jpg);">
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
             <li>
                 <div class="m-live-cont-ca">
                     <div class="m-live-img">
 
                     </div>
-                    <div class="m-live-cont-tt">
+                    <div class="m-cont-tt">
                         바나나툰
                     </div>
-                    <div class="m-live-cont-gen">
+                    <div class="m-cont-gen">
                         개그/일상
                     </div>
                 </div>
-                <div class="m-live-cont-w">
+                <div class="m-cont-w">
                     와나나
                 </div>
             </li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
         </ul>
     </div>
 </section>
-<section></section>
-<section></section>
-<section></section>
-<section></section>
+<section class="m-story m-new">
+    <div class="m-new-cont">
+        <div class="m-live-tt m-event-t">
+            최신화 업데이트
+            <span><br>인기만화 최신화 업데이트</span>
+        </div>
+        <ul class="new-cont">
+            <li>
+                <div class="new-cont-img" style="  background-image: url(./img/m-top2.jpg);"></div>
+                <div class="m-cont-tt">
+                    신림과 봉천 사이
+                </div>
+                <div class="m-cont-gen">
+                    BL
+                </div>
+                <div class="m-cont-w">
+                    AJS
+                </div>
+            </li>
+            <li>
+                <div class="new-cont-img" style="  background-image: url(./img/m-top2.jpg);"></div>
+                <div class="m-cont-tt">
+                    신림과 봉천 사이
+                </div>
+                <div class="m-cont-gen">
+                    BL
+                </div>
+                <div class="m-cont-w">
+                    AJS
+                </div>
+            </li>
+            <li>
+                <div class="new-cont-img" style="  background-image: url(./img/m-top2.jpg);"></div>
+                <div class="m-cont-tt">
+                    신림과 봉천 사이
+                </div>
+                <div class="m-cont-gen">
+                    BL
+                </div>
+                <div class="m-cont-w">
+                    AJS
+                </div>
+            </li>
+            <li>
+                <div class="new-cont-img" style="  background-image: url(./img/m-top2.jpg);"></div>
+                <div class="m-cont-tt">
+                    신림과 봉천 사이
+                </div>
+                <div class="m-cont-gen">
+                    BL
+                </div>
+                <div class="m-cont-w">
+                    AJS
+                </div>
+            </li>
+            <li>
+                <div class="new-cont-img" style="  background-image: url(./img/m-top2.jpg);"></div>
+                <div class="m-cont-tt">
+                    신림과 봉천 사이
+                </div>
+                <div class="m-cont-gen">
+                    BL
+                </div>
+                <div class="m-cont-w">
+                    AJS
+                </div>
+            </li>
+            <li>
+                <div class="new-cont-img" style="  background-image: url(./img/m-top2.jpg);"></div>
+                <div class="m-cont-tt">
+                    신림과 봉천 사이
+                </div>
+                <div class="m-cont-gen">
+                    BL
+                </div>
+                <div class="m-cont-w">
+                    AJS
+                </div>
+            </li>
+            <li>
+                <div class="new-cont-img" style="  background-image: url(./img/m-top2.jpg);"></div>
+                <div class="m-cont-tt">
+                    신림과 봉천 사이
+                </div>
+                <div class="m-cont-gen">
+                    BL
+                </div>
+                <div class="m-cont-w">
+                    AJS
+                </div>
+            </li>
+            <li>
+                <div class="new-cont-img" style="  background-image: url(./img/m-top2.jpg);"></div>
+                <div class="m-cont-tt">
+                    신림과 봉천 사이
+                </div>
+                <div class="m-cont-gen">
+                    BL
+                </div>
+                <div class="m-cont-w">
+                    AJS
+                </div>
+            </li>
+            <li>
+                <div class="new-cont-img" style="  background-image: url(./img/m-top2.jpg);"></div>
+                <div class="m-cont-tt">
+                    신림과 봉천 사이
+                </div>
+                <div class="m-cont-gen">
+                    BL
+                </div>
+                <div class="m-cont-w">
+                    AJS
+                </div>
+            </li>
+            <li>
+                <div class="new-cont-img" style="  background-image: url(./img/m-top2.jpg);"></div>
+                <div class="m-cont-tt">
+                    신림과 봉천 사이
+                </div>
+                <div class="m-cont-gen">
+                    BL
+                </div>
+                <div class="m-cont-w">
+                    AJS
+                </div>
+            </li>
+        </ul>
+    </div>
+</section>
+<section class="m-story m-livetop">
+    <div>
+        <div class="m-live-tt m-event-t">
+            100만명이 선택한 만화
+            <span><br>첫번째로 보셔야 할 작품</span>
+        </div>
+        <ul class="m-live-cont">
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img" style="background-image: url(./img/m-eve1.jpg);">
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+            <li>
+                <div class="m-live-cont-ca">
+                    <div class="m-live-img">
+
+                    </div>
+                    <div class="m-cont-tt">
+                        바나나툰
+                    </div>
+                    <div class="m-cont-gen">
+                        개그/일상
+                    </div>
+                </div>
+                <div class="m-cont-w">
+                    와나나
+                </div>
+            </li>
+        </ul>
+    </div>
+</section>
 {{> template/footer}}
 </body>
 </html>
