--- a/src/less/common.less
+++ b/src/less/common.less
@@ -131,3 +131,51 @@ header {
   text-align: center;
   color: #fff;
 }
+
+footer {
+  background-color: #3a3a3a;
+  color: #999999;
+  text-align: center;
+}
+
+.f-even {
+  height: 230px;
+  width: 100%;
+}
+
+.f-event1 {
+  background-color: rgb(0, 88, 113);
+}
+
+.f-event2 {
+  background-color: rgb(255, 46, 75);
+}
+
+.f-copy {
+  position: relative;
+  padding-top: 50px;
+  text-align: left;
+}
+
+.f-company-logo {
+  display: inline-block;
+  width: 150px;
+  height: 100px;
+}
+
+.f-company-logo-b {
+  font-size: 50px;
+  font-weight: bold;
+  letter-spacing: -2px;
+  vertical-align: bottom;
+  line-height: 35px;
+}
+
+.f-company-logo-s {
+  font-size: 22px;
+  font-weight: bold;
+  letter-spacing: -2px;
+  vertical-align: top;
+  line-height: 20px;
+  padding-left: 2px;
+}
