--- a/src/template/cont/top-one.hbs
+++ b/src/template/cont/top-one.hbs
@@ -1,3 +1,4 @@
+{{#each~}}
 <div class="m-tops-gen-tit">
     {{~genrue~}}
 </div>
@@ -15,3 +16,4 @@
         </div>
     </div>
 </div>
+{{~/each}}
