--- a/src/template/footer.hbs
+++ b/src/template/footer.hbs
@@ -1,3 +1,32 @@
 <footer>
-    &copy; Copyright, All rights reserved.<br><br><br><br><br><br><br><br><br>
+    <div class="f-even f-event1">
+        <div class="m-story f-event-img">
+            ㅇ3ㅇ
+        </div>
+    </div>
+    <div class="f-even f-event2">
+        <div class="m-story f-event-img">
+            ㅇㅂㅇ
+        </div>
+    </div>
+    <div class="m-story f-copy">
+        <div class="f-company-logo">
+            <div class="f-company-logo-b">
+                LEZHIN
+                <span class="f-company-logo-s">
+                    <br>ENTERTAINMENT
+                </span>
+            </div>
+            <div class="f-company-n">
+                (주)레진엔터테인먼트
+                <br>대표 한희성
+            </div>
+        </div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
 </footer>
