--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,4 +1,8 @@
 @import 'common.less';
+@import 'main-sub/m-issue.less';
+@import 'main-sub/m-top.less';
+@import 'main-sub/m-today.less';
+@import 'main-sub/m-live.less';
 
 .m-top {
   width: 100%;
@@ -19,152 +23,12 @@
   width: 1180px;
 }
 
-.m-top-l, .m-top-r {
-  display: inline-block;
-  vertical-align: middle;
-  margin-top: 140px;
-  font-size: 60px;
-  line-height: 80px;
-  padding: 10px;
-  color: rgba(255, 255, 255, 0.5);
-}
-
-.m-top-r {
-  position: absolute;
-  right: 0;
-}
-
-.m-top-h:hover {
-  color: rgba(255, 255, 255, 1);
-}
-
-.m-issue {
-  position: relative;
-  margin-top: 20px;
-}
-
-.m-issue-t {
-  position: relative;
-}
-
 .m-tt {
   display: inline-block;
   vertical-align: bottom;
   font-size: 25px;
   margin-bottom: 10px;
   letter-spacing: -1px;
-}
-
-.m-issue-gen {
-  display: inline-block;
-  position: absolute;
-  top: 0;
-  right: 65px;
-  margin-right: 30px;
-}
-
-.m-issue-tt-btn-r > input {
-  padding: 5px 10px 0px 5px;
-  vertical-align: middle;
-  margin: 0px;
-}
-
-.m-issue-tt-btn {
-  position: absolute;
-  right: 0;
-  top: 0;
-  display: inline-block;
-}
-
-.m-issue-tt-btn > li {
-  display: inline-block;
-  width: 34px;
-  height: 35px;
-  vertical-align: middle;
-  text-align: center;
-  background-color: transparent;
-  border: @cont-sub-border;
-  color: #dbdee3;
-  line-height: 35px;
-  cursor: pointer;
-}
-
-.m-issue-tt-btn > li:nth-child(2) {
-  background-color: #fff;
-  color: #000;
-  border-left: 0;
-}
-
-.m-issue-tt-btn > li:nth-child(2):hover {
-  border: solid 1px #000;
-}
-
-.m-issue-tt-btn-r {
-  padding: 10px;
-  font-size: 12px;
-  margin-left: 10px;
-}
-
-.m-issue-tt-btn-n {
-  font-size: 10px;
-
-}
-
-.m-issue-m {
-  position: relative;
-  vertical-align: top;
-}
-
-.m-issue-m > li {
-  width: calc(100% / 4);
-  display: inline-block;
-  border-right: @cont-border-right;
-  background-color: #ffffff;
-  height: 500px;
-  vertical-align: top;
-}
-
-.m-issue-m > li:last-child {
-  border-right: 0;
-}
-
-.m-issue-m-img {
-  height: 60%;
-  width: 100%;
-  background-size: cover;
-}
-
-.m-issue-txt {
-  height: 40%;
-  width: 100%;
-  letter-spacing: -1px;
-}
-
-.m-issue-txt-s {
-  font-size: 14px;
-  color: @cont-ca-gen;
-  margin: 30px 0 0 20px;
-}
-
-.m-issue-txt-b {
-  font-size: 20px;
-  margin: 2px 0 0 20px;
-}
-
-.m-issue-txt-m {
-  font-size: 14px;
-  border-top: solid 1px #eff1f4;
-  color: #999;
-  margin: 50px 0 0 20px;
-  padding-top: 10px;
-}
-
-.m-issue-event {
-  position: relative;
-  width: 100%;
-  hieght: 180px;
-  margin-top: 50px;
-  background-size: cover;
 }
 
 .m-event-t {
@@ -200,174 +64,24 @@
   border-right: 0;
 }
 
-.m-tops-li {
-  position: relative;
-}
-
-.m-tops-li > li {
-  width: calc(100% / 3);
-  height: 563px;
-  display: inline-block;
-  border-right: @cont-border-right;
-  background-color: #ffffff;
-  vertical-align: top;
-}
-
-.m-tops-li > li:last-child {
-  border-right: 0;
-}
-
 .m-tops-gen-tit {
   padding: 15px 0px 10px 10px;
   font-size: 16px;
   border: @cont-sub-border;
 }
 
-.m-top-line {
+.m-live-tt {
   display: inline-block;
-  vertical-align: top;
-}
-
-.m-topoftop {
-  width: 100%;
-  height: 190px;
-  border: @cont-sub-border;
-  border-top: 0;
   vertical-align: bottom;
-  position: relative;
-  cursor: pointer;
+  font-size: 25px;
+  letter-spacing: -1px;
 }
 
-.m-topoftop-img {
-  height: 100%;
-  width: 100%;
-  background-size: cover;
-  background-position: 50% 50%;
-}
-
-.m-tops1 {
-  width: 20%;
-  text-align: center;
-  font-size: 30px;
-  font-weight: 100;
-  margin-top: 110px;
-  color: #ffffff;
-  padding: 20px 30px 0px 30px;
-}
-
-.m-tops1-t {
-  width: 80%;
-  font-weight: 100;
-  margin-top: 120px;
-  text-align: left;
-  line-height: inherit;
-  font-size: 11px;
-  display: inline-block;
-  color: #fff;
-  vertical-align: bottom;
-  border-left: @cont-sub-border;
-  padding: 10px 5px;
-}
-
-.m-tops1-t > span {
-  text-align: left;
-  line-height: inherit;
-  font-size: 16px;
-}
-
-.m-top-gen-li > li {
-  width: 100%;
-  height: calc(100%/4);
-  border: @cont-sub-border;
-  border-top: 0;
-  cursor: pointer;
-}
-
-.m-tops-no {
-  width: 20%;
-  vertical-align: middle;
-  text-align: center;
-  font-size: 30px;
-  font-weight: 100;
-  padding: 20px 30px 0px 30px;
-}
-
-.m-tops-name {
-  width: 80%;
-}
-
-.m-tops-name-t {
-  display: inline-block;
+.m-live-tt > span {
   color: @cont-ca-gen;
-  font-size: 11px;
-  vertical-align: top;
-  margin-top: 10px;
-  border-left: @cont-sub-border;
-  padding: 10px 5px;
-}
-
-.m-tops-name > img {
-  border-left: @cont-sub-border;
-}
-
-.m-tops-name-tt {
-  text-align: left;
-  line-height: inherit;
-  font-size: 16px;
-  color: @cont-ca-tit;
-}
-
-.m-today-c {
-  position: relative;
-}
-
-.m-today-c > li {
-  width: calc(100% / 8);
-  height: 180px;
-  display: inline-block;
-  border-right: @cont-border-right;
-  vertical-align: top;
-  cursor: pointer;
-}
-
-.m-today-c > li:last-child {
-  border-right: 0px;
-}
-
-.m-today-c-img {
-  height: 130px;
-  width: 100%;
-  background-color: antiquewhite;
-}
-
-.m-today-c-t {
-  color: @cont-ca-tit;
   font-size: 14px;
-  height: 50px;
   vertical-align: top;
-  margin-top: 10px;
-}
-
-.m-today-c-t > span {
-  color: @cont-ca-gen;
-  font-size: 12px;
-}
-
-.m-live-cont > li {
-  display: inline-block;
-  height: 270px;
-  width: calc(100% / 5);
-  vertical-align: top;
-  border-right: @cont-border-right;
-}
-
-.m-live-cont > li:nth-child(5*n) {
-  border-right: 0px;
-}
-
-.m-live-cont-ca {
-  cursor: pointer;
-  vertical-align: bottom;
+  margin-bottom: 0px;
 }
 
 .m-live-img {
@@ -375,22 +89,21 @@
   width: 100%;
   background-size: cover;
   background-position: 50% 50%;
-  background-image: url(../img/m-eve1.jpg);
   border: @cont-sub-border;
 }
 
-.m-live-cont-tt {
+.m-cont-tt {
   color: @cont-ca-tit;
   font-size: 14px;
   padding-top: 10px;
 }
 
-.m-live-cont-gen {
+.m-cont-gen {
   color: @cont-ca-gen;
   font-size: 12px;
 }
 
-.m-live-cont-w {
+.m-cont-w {
   color: #999;
   font-size: 12px;
   padding-top: 5px;
@@ -398,5 +111,26 @@
 }
 
 .m-live-cont-w:hover {
-  decoration: underline;
+  text-decoration: underline;
+}
+
+.new-cont > li {
+  display: inline-block;
+  height: 280px;
+  width: calc(100% / 6);
+  vertical-align: top;
+  border-right: @cont-border-right;
+  margin-bottom: 40px;
+}
+
+.new-cont > li:nth-child(6) {
+  border-right: 0px;
+}
+
+.new-cont-img {
+  height: 230px;
+  width: 100%;
+  background-size: cover;
+  background-position: 50% 50%;
+  border: @cont-sub-border;
 }
