--- a/src/template/footer.hbs
+++ b/src/template/footer.hbs
@@ -9,7 +9,7 @@
             ㅇㅂㅇ
         </div>
     </div>
-    <div class="m-story f-copy">
+    <div class="f-copy">
         <div class="f-company-logo">
             <div class="f-company-logo-b">
                 LEZHIN
@@ -22,11 +22,64 @@
                 <br>대표 한희성
             </div>
         </div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="f-menu">
+            <div class="f-menu-list">
+                <ul class="f-menu-txt">
+                    <li>사업자정보확인</li>
+                    <li>이용약관</li>
+                    <li>개인정보처리방침</li>
+                    <li>블로그</li>
+                    <li>고객지원</li>
+                    <li>페이스북</li>
+                    <li>트위터</li>
+                    <li>채용공고</li>
+                    <li>연재문의</li>
+                    <li>iOS</li>
+                    <li>Android(완전판)</li>
+                    <li>Android(구글 Play)</li>
+                </ul>
+            </div>
+            <div class="f-menu-lang">
+                <div class="lang-txt">
+                    <i class="fa fa-circle"></i>
+                    언어/국가 변경
+                </div>
+                <div class="lang-select">
+                    한국어 / 한국
+                    <div class="lang-select-i">
+                        <i class="fa fa-caret-down"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="f-copy-txt">
+                레진코믹스의 모든 웹툰들은 저작권법에 의거 보호받고 있습니다. 저작권자 또는 레진코믹스의 승인없이 웹툰의 일부 또는 전체를 복사하여 다른 매체(개인 미디어 포함)에 게재하는 행위는 저작권법에 의거 법적 조치에 처해질 수 있습니다.
+            </div>
+            <div class="f-copy-com">
+                사업자 등록번호 114-87-00708 | 통신판매업 신고번호 제2014-서울강남-00058호 | 주소 서울특별시 강남구 봉은사로 18길 65
+                65, Bongeunsa-ro 18-gil, Gangnam-gu, Seoul, Korea<br>
+                대표번호 1670-9917 | 팩스번호 02-517-2484 |
+                <span>
+                    고객문의 help@lezhin.com | 업무 제휴 문의 contact@lezhin.com
+                </span>
+            </div>
+        </div>
     </div>
+    <ul class="f-down">
+        <li>
+            <i class="fa fa-ravelry"></i>
+            제 9회 대한민국 인터넷대상 국무총리상
+        </li>
+        <li>
+            <i class="fa fa-ravelry"></i>
+            글로벌K-스타트업 2013 최우수상
+        </li>
+        <li>
+            <i class="fa fa-ravelry"></i>
+            벤처기업 인증
+        </li>
+        <li>
+            <i class="fa fa-ravelry"></i>
+            클린사이트 선정
+        </li>
+    </ul>
 </footer>
