--- a/src/template/header.hbs
+++ b/src/template/header.hbs
@@ -11,19 +11,24 @@
         </div>
     </div>
     <div class="h-m">
-        <div class="h-logo">LOGO</div>
-        <ul class="h-m-btn">
-            <li>연재</li>
-            <li>완결</li>
-            <li>단행본</li>
-            <li>TOP 100</li>
-            <li>소설</li>
-            <li>SALE</li>
-            <li>BL</li>
-        </ul>
-        <div class="h-m-mem">
-            <input type="text" class="h-m-mem-ser" >
-            <i class="h-search-i fa fa-search"></i>
-            <div class="h-m-mem-btn"><i class="glyphicon glyphicon-menu-hamburger"></i></div>
+        <div class="h-mm">
+            <div class="h-logo">LOGO</div>
+            <ul class="h-m-btn">
+                <li>연재</li>
+                <li>완결</li>
+                <li>단행본</li>
+                <li>TOP 100</li>
+                <li>소설</li>
+                <li>SALE</li>
+                <li>BL</li>
+            </ul>
+            <div class="h-m-mem">
+                <input type="text" class="h-m-mem-ser" >
+                <i class="h-search-i fa fa-search"></i>
+                <div class="h-m-mem-btn">
+                    <i class="glyphicon glyphicon-menu-hamburger"></i>
+                </div>
+            </div>
         </div>
+    </div>
 </header>
