--- a/src/template/top-one.hbs
+++ b/src/template/top-one.hbs
@@ -1,9 +1,8 @@
-{{#each~}}
 <div class="m-tops-gen-tit">
     {{~genrue~}}
 </div>
 <div class="m-topoftop">
-    <div class="m-topoftop-img" style="background-image: url(../img/lank/top-pan01.jpg)">
+    <div class="m-topoftop-img" style="background-image: url(../img/lank/{{img}})">
         <div class="m-tops1 m-top-line">
             1
         </div>
@@ -16,4 +15,3 @@
         </div>
     </div>
 </div>
-{{~/each}}
