--- a/src/less/common.less
+++ b/src/less/common.less
@@ -48,7 +48,7 @@ header {
 }
 
 .fa-circle {
-  font-size: 10px;
+  font-size: x-small;
 }
 
 .h-tm-btn:hover {
@@ -61,6 +61,12 @@ header {
   background-color: #fff;
   height: 60px;
   vertical-align: top;
+}
+
+.h-mm {
+  width: 1200px;
+  position: relative;
+  margin: 0 auto;
 }
 
 .h-logo {
@@ -145,22 +151,26 @@ footer {
 
 .f-event1 {
   background-color: rgb(0, 88, 113);
+  line-height: 230px;
 }
 
 .f-event2 {
   background-color: rgb(255, 46, 75);
+  line-height: 230px;
 }
 
 .f-copy {
   position: relative;
   padding-top: 50px;
   text-align: left;
+  margin: 0px auto;
+  width: 1200px;
 }
 
 .f-company-logo {
   display: inline-block;
-  width: 150px;
-  height: 100px;
+  width: 17%;
+  height: 250px;
 }
 
 .f-company-logo-b {
@@ -178,4 +188,98 @@ footer {
   vertical-align: top;
   line-height: 20px;
   padding-left: 2px;
+}
+
+.f-menu {
+  position: relative;
+  vertical-align: top;
+  width: 750px;
+  display: inline-block;
+}
+
+.f-menu-list {
+  display: inline-block;
+  text-align: left;
+}
+
+.f-menu-txt {
+  display: inline-block;
+}
+
+.f-menu-txt > li {
+  display: inline-block;
+  padding-right: 30px;
+  padding-bottom: 10px;
+  cursor: pointer;
+}
+
+.f-menu-txt > li:nth-child(3) {
+  color: #2ba38a;
+}
+
+.f-menu-lang {
+  position: absolute;
+  display: inline-block;
+  top: -12px;
+  right: -270px;
+  vertical-align: top;
+  width: 300px;
+  height: 30px;
+  font-size: 14px;
+}
+
+.lang-txt {
+  display: inline-block;
+  width: 40%;
+  padding-right: 5px;
+}
+
+.lang-select {
+  position: relative;
+  display: inline-block;
+  width: 60%;
+  line-height: 20px;
+  border: solid 1px #222;
+  background-color: #313131;
+  padding: 5px 15px 5px 15px;
+}
+
+.lang-select-i {
+  position: absolute;
+  display: inline-block;
+  font-size: 12px;
+  top: 5px;
+  right: 10px;
+}
+
+.f-copy-txt {
+  font-size: 12px;
+  padding: 10px 0;
+}
+
+.f-copy-com {
+  color: #555;
+  padding: 10px 0;
+  font-size: 14px;
+  line-height: 30px;
+}
+
+.f-copy-com > span {
+  color: #999999;
+  cursor: pointer;
+}
+
+.f-down {
+  height: 90px;
+  background-color: #313131;
+  color: #717171;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 90px;
+}
+
+.f-down > li {
+  display: inline-block;
+  padding-right: 20px;
+  font-size: 12px;
 }
