--- a/src/template/top-one.hbs
+++ b/src/template/top-one.hbs
@@ -1,17 +1,41 @@
-<div class="m-tops-gen-tit">
-    {{~genrue~}}
-</div>
-<div class="m-topoftop">
-    <div class="m-topoftop-img" style="background-image: url(../img/lank/{{img}})">
-        <div class="m-tops1 m-top-line">
-            1
+<li>
+    <div class="m-tops-gen">
+        <div class="m-top-one">
+            <div class="m-tops-gen-tit">
+                {{~genrue~}}
+            </div>
+            <div class="m-topoftop">
+                <div class="m-topoftop-img" style="background-image: url(../img/lank/{{img}})">
+                    <div class="m-tops1 m-top-line">
+                        1
+                    </div>
+                    <div class="m-tops1-t m-top-line">
+                                                <span>
+                                                    {{~title~}}
+                                                    <br>
+                                                </span>
+                       {{~gentt~}}
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="m-tops1-t m-top-line">
-            <span>
-                {{~title~}}
-                <br>
-            </span>
-            {{~gentt~}}
-        </div>
+        <ul class="m-top-gen-li">
+            {{#each top-lank}}
+                <li>
+                    <div class="m-tops-no m-top-line">2</div>
+                    <div class="m-tops-name m-top-line">
+                        <div class="m-tops-name-t">
+                            <span class="m-tops-name-tt">
+                                {{~title~}}
+                                <br>
+                            </span>
+                            {{~gentt~}}
+                        </div>
+                        <img align="right" src="./img/lank/top-{{~gen~}}.jpg"
+                             height="80" width="80">
+                    </div>
+                </li>
+            {{/each}}
+        </ul>
     </div>
-</div>
+</li>
