--- a/src/less/main-sub/m-top.less
+++ b/src/less/main-sub/m-top.less
@@ -48,15 +48,17 @@
 }
 
 .m-tops1-t {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: 125px;
   width: 80%;
   font-weight: 100;
-  margin-top: 120px;
   text-align: left;
   line-height: inherit;
   font-size: 11px;
   display: inline-block;
   color: #fff;
-  vertical-align: bottom;
   border-left: @cont-sub-border;
   padding: 10px 5px;
 }
