--- a/src/template/top-lank.hbs
+++ b/src/template/top-lank.hbs
@@ -1,14 +1,12 @@
 <li>
-    <div class="m-tops-no m-top-line">2</div>
+    <div class="m-tops-no m-top-line">{{~lank~}}</div>
     <div class="m-tops-name m-top-line">
         <div class="m-tops-name-t">
             <span class="m-tops-name-tt">
                 {{~title~}}
                 <br>
-            </span>
-            {{~gentt~}}
+            </span>{{~gentt~}}
         </div>
-        <img align="right" src="./img/lank/top-{{~gen~}}.jpg"
-             height="80" width="80">
+        <img align="right" src="./img/lank/top-{{~gen~}}.jpg" height="80" width="80">
     </div>
 </li>
