--- a/src/less/main-sub/m-issue.less
+++ b/src/less/main-sub/m-issue.less
@@ -1,32 +1,9 @@
-.m-top-l, .m-top-r {
-  display: inline-block;
-  vertical-align: middle;
-  margin-top: 140px;
-  font-size: 60px;
-  line-height: 80px;
-  padding: 10px;
-  color: rgba(255, 255, 255, 0.5);
-}
-
-.m-top-r {
-  position: absolute;
-  right: 0;
-}
-
-.m-top-h:hover {
-  color: rgba(255, 255, 255, 1);
-}
-
-.m-issue {
+.m-mainIssue-t {
   position: relative;
   margin-top: 20px;
 }
 
-.m-issue-t {
-  position: relative;
-}
-
-.m-issue-gen {
+.m-mainIssue-gen {
   display: inline-block;
   position: absolute;
   top: 0;
@@ -34,20 +11,20 @@
   margin-right: 30px;
 }
 
-.m-issue-tt-btn-r > input {
+.m-mainIssue-gen-btn-r > input {
   padding: 5px 10px 0px 5px;
   vertical-align: middle;
   margin: 0px;
 }
 
-.m-issue-tt-btn {
+.m-mainIssue-gen-btn {
   position: absolute;
   right: 0;
   top: 0;
   display: inline-block;
 }
 
-.m-issue-tt-btn > li {
+.m-mainIssue-gen-btn > li {
   display: inline-block;
   width: 34px;
   height: 35px;
@@ -60,32 +37,32 @@
   cursor: pointer;
 }
 
-.m-issue-tt-btn > li:nth-child(2) {
+.m-mainIssue-gen-btn > li:nth-child(2) {
   background-color: #fff;
   color: #000;
   border-left: 0;
 }
 
-.m-issue-tt-btn > li:nth-child(2):hover {
+.m-mainIssue-gen-btn > li:nth-child(2):hover {
   border: solid 1px #000;
 }
 
-.m-issue-tt-btn-r {
+.m-mainIssue-gen-btn-r {
   padding: 10px;
   font-size: 12px;
   margin-left: 10px;
 }
 
-.m-issue-tt-btn-n {
+.m-mainIssue-gen-btn-n {
   font-size: 10px;
 }
 
-.m-issue-m {
+.m-mainIssue-m {
   position: relative;
   vertical-align: top;
 }
 
-.m-issue-m > li {
+.m-mainIssue-m > li {
   width: calc(100% / 4);
   display: inline-block;
   border-right: @cont-border-right;
@@ -94,34 +71,35 @@
   vertical-align: top;
 }
 
-.m-issue-m > li:last-child {
+m-mainIssue-m > li:last-child {
   border-right: 0;
 }
 
-.m-issue-m-img {
+.m-mainIssue-img {
   height: 60%;
   width: 100%;
   background-size: cover;
+  background-image: url('../../img/m-event.jpg');
 }
 
-.m-issue-txt {
+.m-mainIssue-txt {
   height: 40%;
   width: 100%;
   letter-spacing: -1px;
 }
 
-.m-issue-txt-s {
+.m-mainIssue-txt-s {
   font-size: 14px;
   color: @cont-ca-gen;
   margin: 30px 0 0 20px;
 }
 
-.m-issue-txt-b {
+.m-mainIssue-txt-b {
   font-size: 20px;
   margin: 2px 0 0 20px;
 }
 
-.m-issue-txt-m {
+.m-mainIssue-txt-m {
   font-size: 14px;
   border-top: solid 1px #eff1f4;
   color: #999;
