--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,24 +1,42 @@
 @import 'common.less';
-@import 'main-sub/m-issue.less';
-@import 'main-sub/m-top.less';
-@import 'main-sub/m-today.less';
-@import 'main-sub/m-live.less';
+@import './main-sub/m-issue';
+@import './main-sub/m-top.less';
+@import './main-sub/m-today.less';
+@import './main-sub/m-live.less';
 
-.m-top {
+.m-slide-img {
+  background-size: cover;
+  background-position: 50% 50%;
+  background-image: url("../img/m-top.jpg");
   width: 100%;
   height: 400px;
   margin: 110px 0px 50px 0px;
 }
 
-.m-top-img {
-  background-size: cover;
-  background-position: 50% 50%;
-  width: 100%;
-  height: 400px;
+.m-slide-btn {
+  position: relative;
 }
 
-.m-story {
-  position: relative;
+.m-slide-btn-l, .m-slide-btn-r {
+  display: inline-block;
+  vertical-align: middle;
+  margin-top: 140px;
+  font-size: 60px;
+  line-height: 80px;
+  padding: 10px;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.m-slide-btn-r {
+  position: absolute;
+  right: 0;
+}
+
+.m-slide-h:hover {
+  color: rgba(255, 255, 255, 1);
+}
+
+.m-body {
   margin: 0px auto;
   width: 1180px;
 }
