--- a/src/index.hbs
+++ b/src/index.hbs
@@ -46,21 +46,50 @@
             </ul>
         </div>
         <ul class="m-mainIssue-m">
-            <li>
-                <div class="m-mainIssue-img"  style="background-image: url(./img/m-eve1.jpg)"></div>
-                <div class="m-mainIssue-txt">
-                    <div class="m-mainIssue-txt-s">일상</div>
-                    <div class="m-mainIssue-txt-b">고양이의 하루</div>
-                    <div class="m-mainIssue-txt-m">러라라라라<br>라라라라</div>
-                </div>
-            </li>
         </ul>
         <div class="m-issue-event" style="background-image: url(./img/m-eve1.jpg)">
-            <img src="./img/m-event.jpg" width="1000" height="180">
         </div>
     </div>
+    <div class="m-body">
+        <div class="m-event-t">
+            <div class="m-tt">
+                무료공개, 파격할인 만화
+            </div>
+            <div class="m-all">
+                전체보기
+            </div>
+        </div>
+        <ul class="m-event-m">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
 </section>
-<section class="m-top"></section>
+<section class="m-top">
+    <div class="m-body">
+        <div class="m-event-t">
+            <div class="m-tt">
+                인기 만화
+            </div>
+            <div class="m-all">
+                전체보기
+            </div>
+        </div>
+        <ul class="m-top-li">
+            <li>
+                <div class="m-top-gen-tit">제목</div>
+                <div class="m-oneTop" style="background-image: url('./img/m-top.jpg')">
+                    <div class="m-oneTop-lank">1</div>
+                    <div class="m-oneTop-t">안녕 하루 <span>d3d</span></div>
+                </div>
+                <ul>
+                    <li></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+</section>
 <section class="m-today"></section>
 <section class="m-liveTop"></section>
 <section class="m-new"></section>
