--- a/src/less/main-sub/m-issue.less
+++ b/src/less/main-sub/m-issue.less
@@ -71,7 +71,7 @@
   vertical-align: top;
 }
 
-m-mainIssue-m > li:last-child {
+.m-mainIssue-m > li:last-child {
   border-right: 0;
 }
 
@@ -110,7 +110,8 @@ m-mainIssue-m > li:last-child {
 .m-issue-event {
   position: relative;
   width: 100%;
-  hieght: 180px;
+  height: 180px;
   margin-top: 50px;
   background-size: cover;
+  cursor: pointer;
 }
