--- a/src/less/main-sub/m-top.less
+++ b/src/less/main-sub/m-top.less
@@ -1,8 +1,8 @@
-.m-tops-li {
+.m-top-li {
   position: relative;
 }
 
-.m-tops-li > li {
+.m-top-li > li {
   width: calc(100% / 3);
   height: 563px;
   display: inline-block;
@@ -20,34 +20,36 @@
   vertical-align: top;
 }
 
-.m-topoftop {
+.m-top-gen-tit {
+  padding: 15px 0px 10px 10px;
+  font-size: 16px;
+  border: @cont-sub-border;
+}
+
+.m-oneTop {
   width: 100%;
   height: 190px;
   border: @cont-sub-border;
   border-top: 0;
+  background-size: cover;
+  background-position: 50% 50%;
   vertical-align: bottom;
   position: relative;
   cursor: pointer;
 }
 
-.m-topoftop-img {
-  height: 100%;
-  width: 100%;
-  background-size: cover;
-  background-position: 50% 50%;
-}
-
-.m-tops1 {
+.m-oneTop-lank {
+  position: absolute;
+  display: inline-block;
   width: 20%;
   text-align: center;
   font-size: 30px;
   font-weight: 100;
-  margin-top: 110px;
   color: #ffffff;
   padding: 20px 30px 0px 30px;
 }
 
-.m-tops1-t {
+.m-oneTop-t {
   position: absolute;
   top: 0;
   right: 0;
@@ -63,7 +65,7 @@
   padding: 10px 5px;
 }
 
-.m-tops1-t > span {
+.m-oneTop-t > span {
   text-align: left;
   line-height: inherit;
   font-size: 16px;
