--- a/src/template/m-mainIssue.hbs
+++ b/src/template/m-mainIssue.hbs
@@ -1,5 +1,5 @@
 <li>
-    <div class="m-mainIssue-img"></div>
+    <div class="m-mainIssue-img" style="background-image: url({{~img~}})"></div>
     <div class="m-mainIssue-txt">
         <div class="m-mainIssue-txt-s">{{~gen~}}</div>
         <div class="m-mainIssue-txt-b">{{~title~}}</div>
