--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,5 +1,5 @@
 @import 'common.less';
-@import './main-sub/m-issue';
+@import './main-sub/m-issue.less';
 @import './main-sub/m-top.less';
 @import './main-sub/m-today.less';
 @import './main-sub/m-live.less';
@@ -80,12 +80,6 @@
 
 .m-event-m > li:last-child {
   border-right: 0;
-}
-
-.m-tops-gen-tit {
-  padding: 15px 0px 10px 10px;
-  font-size: 16px;
-  border: @cont-sub-border;
 }
 
 .m-live-tt {
